Changed the index.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <main class="hero">
     <div class="info-content" data-aos="fade-up" data-aos-duration="2000">
       <h3>Artist</h3>
-      <h1>Dani Rivero</h1>
-      <p>“When we listen to music we are not listening to the past, we are not listening to the future, we are listening to an expanded present.”</p>
+      <h1>A Boogie Wit Da Hoodie</h1>
+      <p>“Not everyone's really got the heart to talk about what's going on with their love in their music.”</p>
       <button class="btn">Read More</button>
     </div>
   </main>
